@@ -81,6 +81,7 @@ export(rk.XML.wizard)
 export(rk.build.plugin)
 export(rk.comment)
 export(rk.get.comp)
+export(rk.get.empty.e)
 export(rk.get.indent)
 export(rk.get.rkh.prompter)
 export(rk.i18n.comment)
@@ -103,6 +104,7 @@ export(rk.rkh.technical)
 export(rk.rkh.title)
 export(rk.rkh.usage)
 export(rk.set.comp)
+export(rk.set.empty.e)
 export(rk.set.indent)
 export(rk.set.rkh.prompter)
 export(rk.testsuite.doc)
