@@ -5,7 +5,7 @@
 \title{R to JavaScript translation}
 \usage{
 js(..., level = 2, indent.by = rk.get.indent(), linebreaks = TRUE,
-  empty.e = FALSE)
+  empty.e = rk.get.empty.e())
 }
 \arguments{
 \item{...}{One or several character strings and/or \code{XiMpLe.node} objects with plugin nodes,
