@@ -33,6 +33,8 @@ added:
     node easier
   - new functions rk.get.indent() and rk.set.indent() to globally set
     indentation string
+  - new functions rk.get.empty.e() and rk.set.empty.e() to globally define
+    the handling of empty "else" clauses in JavaScript
   - in rk.JS.header(), the second value provided by "add" can now be named
     "noquote" to have it nested in the JS noquote() function
 changed:
@@ -44,6 +46,8 @@ changed:
     useful feedback
   - all functions offering "intent.by" as an option now fetch the default
     value by calling rk.get.indent()
+  - all functions offering "empty.e" as an option now fetch the default
+    value by calling rk.get.empty.e()
   - removed trailing newline in rk.JS.header() output
 
 changes in version 0.07-3 (2015-06-29)
